--- a/docs/partials/nav.html
+++ b/docs/partials/nav.html
@@ -1,5 +1,5 @@
 <!-- Navbar (W3 structure with new CSS) -->
-<header class="cw-top">
+<header class="cw-top nav">
   <div class="cw-bar cw-card" id="myNavbar">
     <!-- Brand -->
     <a href="/" class="cw-bar-item cw-button">
