Revert "w3-migration localy"
This reverts commit 9d2e244d2cf4424c053b57fedb969af30f9f9027.

--- a/docs/partials/nav.html
+++ b/docs/partials/nav.html
@@ -1,28 +1,28 @@
 <!-- Navbar (W3 structure with new CSS) -->
-<header class="cw-top nav">
-  <div class="cw-bar cw-card" id="myNavbar">
+<header class="w3-top nav">
+  <div class="w3-bar w3-card" id="myNavbar">
     <!-- Brand -->
-    <a href="/" class="cw-bar-item cw-button">
+    <a href="/" class="w3-bar-item w3-button">
       <img src="/assets/img/logo.png" alt="CWP Logo" style="height:40px;width:40px;">
       <span class="logo-title">ClockworkProduction</span>
     </a>
 
     <!-- Desktop links -->
-    <div class="cw-bar-item cw-right cw-hide-small">
-      <a href="/pages/about_us.html" class="cw-bar-item cw-button">ABOUT US</a>
+    <div class="w3-bar-item w3-right w3-hide-small">
+      <a href="/pages/about_us.html" class="w3-bar-item w3-button">ABOUT US</a>
 
-      <div class="cw-dropdown-hover">
-        <button class="cw-button">OUR WORK ▾</button>
-        <div class="cw-dropdown-content cw-bar-block cw-card-4">
-          <a href="/pages/pixelpulse.html" class="cw-bar-item cw-button">PIXELPULSE</a>
-          <a href="/pages/frameforge.html" class="cw-bar-item cw-button">FRAMEFORGE</a>
-          <a href="/pages/cwp_studio.html" class="cw-bar-item cw-button">CWP STUDIO</a>
+      <div class="w3-dropdown-hover">
+        <button class="w3-button">OUR WORK ▾</button>
+        <div class="w3-dropdown-content w3-bar-block w3-card-4">
+          <a href="/pages/pixelpulse.html" class="w3-bar-item w3-button">PIXELPULSE</a>
+          <a href="/pages/frameforge.html" class="w3-bar-item w3-button">FRAMEFORGE</a>
+          <a href="/pages/cwp_studio.html" class="w3-bar-item w3-button">CWP STUDIO</a>
         </div>
       </div>
 
-      <a href="/pages/meet_the_crew.html" class="cw-bar-item cw-button">TEAM :3</a>
-      <a href="/pages/contact.html" class="cw-bar-item cw-button">CONTACT</a>
-      <a href="/pages/community.html" class="cw-bar-item cw-button">COMMUNITY</a>
+      <a href="/pages/meet_the_crew.html" class="w3-bar-item w3-button">TEAM :3</a>
+      <a href="/pages/contact.html" class="w3-bar-item w3-button">CONTACT</a>
+      <a href="/pages/community.html" class="w3-bar-item w3-button">COMMUNITY</a>
 
       <!-- Theme toggle switch -->
       <label class="theme-switch" for="theme-checkbox-desktop">
@@ -35,15 +35,15 @@
     </div>
 
     <!-- Mobile Hamburger -->
-    <a href="javascript:void(0)" class="cw-bar-item cw-button cw-right cw-hide-large cw-hide-medium" onclick="w3_open()">
+    <a href="javascript:void(0)" class="w3-bar-item w3-button w3-right w3-hide-large w3-hide-medium" onclick="w3_open()">
       <i class="fa fa-bars"></i>
     </a>
   </div>
 </header>
 
 <!-- Sidebar (mobile) -->
-<nav class="cw-sidebar cw-bar-block cw-card cw-animate-left cw-hide-large cw-hide-medium" style="display:none" id="mySidebar">
-  <a href="javascript:void(0)" onclick="w3_close()" class="cw-bar-item cw-button cw-large">Close ×</a>
+<nav class="w3-sidebar w3-bar-block w3-card w3-animate-left w3-hide-large w3-hide-medium" style="display:none" id="mySidebar">
+  <a href="javascript:void(0)" onclick="w3_close()" class="w3-bar-item w3-button w3-large">Close ×</a>
 
   <!-- Theme toggle inside sidebar -->
   <label class="theme-switch" for="theme-checkbox-mobile">
@@ -54,19 +54,19 @@
     </div>
   </label>
 
-  <a href="/index.html" onclick="w3_close()" class="cw-bar-item cw-button">HOME</a>
-  <a href="/pages/about_us.html" onclick="w3_close()" class="cw-bar-item cw-button">ABOUT US</a>
+  <a href="/index.html" onclick="w3_close()" class="w3-bar-item w3-button">HOME</a>
+  <a href="/pages/about_us.html" onclick="w3_close()" class="w3-bar-item w3-button">ABOUT US</a>
 
-  <div class="cw-dropdown-hover">
-    <button class="cw-button">OUR WORK ▾</button>
-    <div class="cw-dropdown-content cw-bar-block cw-card-4">
-      <a href="/pages/pixelpulse.html" class="cw-bar-item cw-button">PIXELPULSE</a>
-      <a href="/pages/frameforge.html" class="cw-bar-item cw-button">FRAMEFORGE</a>
-      <a href="/pages/cwp_studio.html" class="cw-bar-item cw-button">CWP STUDIO</a>
+  <div class="w3-dropdown-hover">
+    <button class="w3-button">OUR WORK ▾</button>
+    <div class="w3-dropdown-content w3-bar-block w3-card-4">
+      <a href="/pages/pixelpulse.html" class="w3-bar-item w3-button">PIXELPULSE</a>
+      <a href="/pages/frameforge.html" class="w3-bar-item w3-button">FRAMEFORGE</a>
+      <a href="/pages/cwp_studio.html" class="w3-bar-item w3-button">CWP STUDIO</a>
     </div>
   </div>
 
-  <a href="/pages/meet_the_crew.html" onclick="w3_close()" class="cw-bar-item cw-button">TEAM :3</a>
-  <a href="/pages/community.html" onclick="w3_close()" class="cw-bar-item cw-button">COMMUNITY</a>
-  <a href="/pages/contact.html" onclick="w3_close()" class="cw-bar-item cw-button">CONTACT</a>
+  <a href="/pages/meet_the_crew.html" onclick="w3_close()" class="w3-bar-item w3-button">TEAM :3</a>
+  <a href="/pages/community.html" onclick="w3_close()" class="w3-bar-item w3-button">COMMUNITY</a>
+  <a href="/pages/contact.html" onclick="w3_close()" class="w3-bar-item w3-button">CONTACT</a>
 </nav>
