--- a/docs/partials/footer.html
+++ b/docs/partials/footer.html
@@ -1,41 +1,41 @@
-<footer class="cw-container cw-padding-32 cw-center footer">
-  <div class="cw-row-padding">
-    <div class="cw-col l3 m6 s12">
+<footer class="w3-container w3-padding-32 w3-center footer">
+  <div class="w3-row-padding">
+    <div class="w3-col l3 m6 s12">
       <img src="/assets/img/logo.png" alt="CWP LOGO" style="width: 125px;">
-      <h3 class="cw-large">ClockWorksProduction</h3>
-      <p class="cw-small">Here at CWP we aim to create enjoyable learning while having fun.<br>- ClockWork, 5/2025</p>
+      <h3 class="w3-large">ClockWorksProduction</h3>
+      <p class="w3-small">Here at CWP we aim to create enjoyable learning while having fun.<br>- ClockWork, 5/2025</p>
     </div>
 
-    <div class="cw-col l3 m6 s12">
-      <h4 class="cw-large">Contact us</h4>
+    <div class="w3-col l3 m6 s12">
+      <h4 class="w3-large">Contact us</h4>
       <a href="mailto:clockworksproduction.stmain1@gmail.com">clockworksproduction.stmain1@gmail.com</a>
-      <p class="cw-small">Better to contact us via Discord or Reddit.</p>
+      <p class="w3-small">Better to contact us via Discord or Reddit.</p>
     </div>
 
-    <div class="cw-col l3 m6 s12">
-        <h4 class="cw-large">Our Community</h4>
-        <div class="cw-bar">
-            <a href="https://www.reddit.com/r/ClockWorkProduction/" class="cw-bar-item cw-button" aria-label="Reddit"><i class="fab fa-reddit cw-large"></i></a>
-            <a href="https://discord.gg/8Pspj3chzc" class="cw-bar-item cw-button" aria-label="Discord"><i class="fab fa-discord cw-large"></i></a>
-            <a href="https://www.youtube.com/@theknowledgezoneinternatio6948" class="cw-bar-item cw-button" aria-label="YouTube"><i class="fab fa-youtube cw-large"></i></a>
-            <a href="https://www.twitch.tv/agentblacktigerstreams" class="cw-bar-item cw-button" aria-label="Twitch"><i class="fab fa-twitch cw-large"></i></a>
+    <div class="w3-col l3 m6 s12">
+        <h4 class="w3-large">Our Community</h4>
+        <div class="w3-bar">
+            <a href="https://www.reddit.com/r/ClockWorkProduction/" class="w3-bar-item w3-button" aria-label="Reddit"><i class="fab fa-reddit w3-large"></i></a>
+            <a href="https://discord.gg/8Pspj3chzc" class="w3-bar-item w3-button" aria-label="Discord"><i class="fab fa-discord w3-large"></i></a>
+            <a href="https://www.youtube.com/@theknowledgezoneinternatio6948" class="w3-bar-item w3-button" aria-label="YouTube"><i class="fab fa-youtube w3-large"></i></a>
+            <a href="https://www.twitch.tv/agentblacktigerstreams" class="w3-bar-item w3-button" aria-label="Twitch"><i class="fab fa-twitch w3-large"></i></a>
         </div>
 
-        <h4 class="cw-large" style="margin-top: 1rem;">Social Media</h4>
-        <div class="cw-bar">
-            <a href="https://github.com/ClockWorksProduction" class="cw-bar-item cw-button" aria-label="GitHub"><i class="fab fa-github cw-large"></i></a>
-            <a href="https://clockworks-production.itch.io/" class="cw-bar-item cw-button" aria-label="itch.io"><i class="fab fa-itch-io cw-large"></i></a>
-            <a href="https://www.furaffinity.net/user/clockworkproduction" class="cw-bar-item cw-button" aria-label="Fur Affinity"><i class="fa fa-paw cw-large"></i></a>
-            <a href="https://bsky.app/profile/clockworkteam.bsky.social" class="cw-bar-item cw-button" aria-label="Bluesky"><i class="fab fa-bluesky cw-large"></i></a>
-            <a href="https://x.com/ClockWorkP57131" class="cw-bar-item cw-button" aria-label="Twitter"><i class="fab fa-twitter cw-large"></i></a>
-            <a href="https://web.facebook.com/profile.php?id=61575382072883" class="cw-bar-item cw-button" aria-label="Facebook"><i class="fab fa-facebook cw-large"></i></a>
+        <h4 class="w3-large" style="margin-top: 1rem;">Social Media</h4>
+        <div class="w3-bar">
+            <a href="https://github.com/ClockWorksProduction" class="w3-bar-item w3-button" aria-label="GitHub"><i class="fab fa-github w3-large"></i></a>
+            <a href="https://clockworks-production.itch.io/" class="w3-bar-item w3-button" aria-label="itch.io"><i class="fab fa-itch-io w3-large"></i></a>
+            <a href="https://www.furaffinity.net/user/clockworkproduction" class="w3-bar-item w3-button" aria-label="Fur Affinity"><i class="fa fa-paw w3-large"></i></a>
+            <a href="https://bsky.app/profile/clockworkteam.bsky.social" class="w3-bar-item w3-button" aria-label="Bluesky"><i class="fab fa-bluesky w3-large"></i></a>
+            <a href="https://x.com/ClockWorkP57131" class="w3-bar-item w3-button" aria-label="Twitter"><i class="fab fa-twitter w3-large"></i></a>
+            <a href="https://web.facebook.com/profile.php?id=61575382072883" class="w3-bar-item w3-button" aria-label="Facebook"><i class="fab fa-facebook w3-large"></i></a>
         </div>
     </div>
 
-    <div class="cw-col l3 m6 s12">
-      <h4 class="cw-large">Support us</h4>
-        <a href="https://ko-fi.com/clockworksproduction" class="cw-bar-item cw-button" aria-label="Ko-fi"><i class="fa-solid fa-mug-hot cw-large"></i></a>
-        <a href="https://patreon.com/ClockWorksProduction" class="cw-bar-item cw-button" aria-label="Patreon"><i class="fab fa-patreon cw-large"></i></a>
+    <div class="w3-col l3 m6 s12">
+      <h4 class="w3-large">Support us</h4>
+        <a href="https://ko-fi.com/clockworksproduction" class="w3-bar-item w3-button" aria-label="Ko-fi"><i class="fa-solid fa-mug-hot w3-large"></i></a>
+        <a href="https://patreon.com/ClockWorksProduction" class="w3-bar-item w3-button" aria-label="Patreon"><i class="fab fa-patreon w3-large"></i></a>
       </div>
     </div>
 
