--- a/docs/partials/nav.html
+++ b/docs/partials/nav.html
@@ -14,7 +14,7 @@
             <div class="w3-dropdown-hover">
                 <button class="w3-button">OUR WORK ▾</button>
                 <div class="w3-dropdown-content w3-bar-block w3-card-4">
-                    <a href="/pages/pixelpulse.html" class="w3-bar-item w3-button">PIXELPULSE</a>
+                    <a href="/pages/pixelpulse/index.html" class="w3-bar-item w3-button">PIXELPULSE</a>
                     <a href="/pages/frameforge.html" class="w3-bar-item w3-button">FRAMEFORGE</a>
                     <a href="/pages/cwp_studio.html" class="w3-bar-item w3-button">CWP STUDIO</a>
                 </div>
